# ios-gps-spoofer

./: .gitignore  README.md  test_admin_tunnel.py  啟動.bat
backend/: pyproject.toml  requirements.txt
backend/src/ios_gps_spoofer/: __init__.py  config.py
backend/src/ios_gps_spoofer/api/: __init__.py  app_state.py  models.py  routes.py  server.py  websocket_manager.py
backend/src/ios_gps_spoofer/device/: __init__.py  device_manager.py  exceptions.py  models.py  version_utils.py
backend/src/ios_gps_spoofer/location/: __init__.py  coordinates.py  exceptions.py  location_service.py
backend/src/ios_gps_spoofer/simulation/: __init__.py  exceptions.py  gps_drift.py  gpx_parser.py  path_simulator.py  speed_profiles.py  state_machine.py
backend/tests/: conftest.py  test_api_models.py  test_api_routes.py  test_app_state.py  test_coordinates.py  test_device_manager.py  test_e2e_integration.py  test_exceptions.py  test_gps_drift.py  test_gpx_parser.py  test_integration_location.py  test_integration_simulation.py  test_location_exceptions.py  test_location_service.py  test_models.py  test_path_simulator.py  test_service_provider.py  test_simulation_exceptions.py  test_speed_profiles.py  test_state_machine.py  test_version_utils.py  test_websocket_manager.py
frontend/: index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
frontend/electron/: main.ts  preload.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: ControlPanel.tsx  DevicePanel.tsx  MapView.tsx  StatusBar.tsx  Toast.tsx
frontend/src/hooks/: useToast.ts  useWasdControl.ts
frontend/src/services/: apiClient.ts  wsClient.ts
frontend/src/test/: ControlPanel.test.tsx  DevicePanel.test.tsx  setup.ts  (+3 more)
(+1 files in other folders)
